# hackathon_oct_2025_tray

./: .env.template  .gitignore  ANTHROPIC_VECTOR_IMPLEMENTATION.md  CLAUDE.md  ENHANCED_RAG_SUMMARY.md  EVALUATION_SUMMARY.md  IMPLEMENTATION.md  PHASE3_IMPROVEMENTS.md  README.md  additional_packages.txt  available_anthropic_models.json  pyproject.toml  setup_vector_db.py  test_db_questions.py
data/: private_questions_sample.json  public_questions.json  sample_response.json
data/currencies/: currency_names.json  currency_rates.json
data/vector_db/: processed_pdfs.json  vector_index.faiss  vector_metadata.json
src/: agent.py  client.py  evaluate.py  utils.py
src/agents/: __init__.py  aggregator.py  base.py  db_agent.py  evaluator.py  rag_agent.py  router.py
src/mcp_servers/: currency_converter.py  database.py  vector_server.py
src/util/: client.py  contextual_vector_setup.py  embeddings.py  pdf_vector_setup.py  simple_vector_setup.py  utils.py
tests/: __init__.py  test_db_agent.py
